@@ -56,6 +56,7 @@ FieldPanels can now be marked as read-only with the `read_only=True` keyword arg
  * Remove color tokens which are duplicates / unused (Thibaud Colas)
  * Add tests to help with maintenance of theme color tokens (Thibaud Colas)
  * Split out a base listing view from generic index view (Matt Westcott)
+ * Update type hints in admin/ui/components.py so that `parent_context` is mutable (Andreas Nüßlein)
 
 
 ## Upgrade considerations
