@@ -1,4 +1,4 @@
-from typing import Any, Mapping
+from typing import Any, MutableMapping
 
 from django.forms import MediaDefiningClass
 from django.template import Context
@@ -6,10 +6,12 @@ from django.template.loader import get_template
 
 
 class Component(metaclass=MediaDefiningClass):
-    def get_context_data(self, parent_context: Mapping[str, Any]) -> Mapping[str, Any]:
+    def get_context_data(
+        self, parent_context: MutableMapping[str, Any]
+    ) -> MutableMapping[str, Any]:
         return {}
 
-    def render_html(self, parent_context: Mapping[str, Any] = None) -> str:
+    def render_html(self, parent_context: MutableMapping[str, Any] = None) -> str:
         if parent_context is None:
             parent_context = Context()
         context_data = self.get_context_data(parent_context)
